--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,12 @@ beautifulsoup4==4.9.1
 certifi==2020.6.20
 chardet==3.0.4
 cycler==0.10.0
+dj-database-url==0.5.0
+dj-static==0.0.6
 Django==3.1
 django-bootstrap4==2.2.0
 djangorestframework==3.11.1
+gunicorn==20.0.4
 idna==2.10
 kiwisolver==1.2.0
 matplotlib==3.3.1
@@ -15,10 +18,12 @@ Pillow==7.2.0
 psycopg2-binary==2.8.5
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-decouple==3.3
 pytz==2020.1
 requests==2.24.0
 six==1.15.0
 soupsieve==2.0.1
 SQLAlchemy==1.3.19
 sqlparse==0.3.1
+static3==0.7.0
 urllib3==1.25.10
